fix: tile hover issue on mobile

--- a/styles/blog.module.scss
+++ b/styles/blog.module.scss
@@ -56,6 +56,7 @@
     gap: 4rem;
     padding: 0 5%;
     padding-bottom: 3%;
+    overflow: hidden;
   }
 }
 
